fixxed a lot
fixxed trainingplan
fixxed adding exercises
fixxed menu button
added link exercise
added datainitializer